# mooned

./: .gitignore  Makefile  Readme.md  appmenu.ui  main.c  menu.ui  meson.build  mooned.gresource.xml  moonedapp.c  moonedapp.h  moonedwin.c  moonedwin.h  moonedwin.ui
